@@ -8,7 +8,6 @@ package net.neoforged.fml;
 import static net.neoforged.fml.Logging.CORE;
 import static net.neoforged.fml.Logging.LOADING;
 
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -36,10 +35,9 @@ import net.neoforged.fml.loading.FMLEnvironment;
 import net.neoforged.fml.loading.FMLLoader;
 import net.neoforged.fml.loading.ImmediateWindowHandler;
 import net.neoforged.fml.loading.LoadingModList;
-import net.neoforged.fml.loading.moddiscovery.AbstractModProvider;
-import net.neoforged.fml.loading.moddiscovery.InvalidModIdentifier;
 import net.neoforged.fml.loading.moddiscovery.ModFileInfo;
 import net.neoforged.fml.loading.moddiscovery.ModInfo;
+import net.neoforged.fml.loading.moddiscovery.locators.JarModsDotTomlModFileReader;
 import net.neoforged.fml.loading.progress.StartupNotificationManager;
 import net.neoforged.neoforgespi.language.IModInfo;
 import net.neoforged.neoforgespi.language.IModLanguageProvider;
@@ -62,8 +60,7 @@ public final class ModLoader {
 
     private static final Logger LOGGER = LogManager.getLogger();
 
-    private static final List<ModLoadingException> loadingExceptions = new ArrayList<>();
-    private static final List<ModLoadingWarning> loadingWarnings = new ArrayList<>();
+    private static final List<ModLoadingIssue> loadingIssues = new ArrayList<>();
     private static boolean loadingStateValid;
     private static ModList modList;
 
@@ -72,25 +69,6 @@ public final class ModLoader {
         CrashReportCallables.registerCrashCallable("ModLauncher launch target", FMLLoader::launcherHandlerName);
         CrashReportCallables.registerCrashCallable("ModLauncher services", ModLoader::computeModLauncherServiceList);
         CrashReportCallables.registerCrashCallable("FML Language Providers", ModLoader::computeLanguageList);
-    }
-
-    private static void collectLoadingErrors(LoadingModList loadingModList) {
-        loadingModList.getErrors().stream()
-                .flatMap(ModLoadingException::fromEarlyException)
-                .forEach(loadingExceptions::add);
-        loadingModList.getBrokenFiles().stream()
-                .map(file -> new ModLoadingWarning(null, InvalidModIdentifier.identifyJarProblem(file.getFilePath()).orElse("fml.modloading.brokenfile"), file.getFileName()))
-                .forEach(loadingWarnings::add);
-
-        loadingModList.getWarnings().stream()
-                .flatMap(ModLoadingWarning::fromEarlyException)
-                .forEach(loadingWarnings::add);
-
-        loadingModList.getModFiles().stream()
-                .filter(ModFileInfo::missingLicense)
-                .filter(modFileInfo -> modFileInfo.getMods().stream().noneMatch(thisModInfo -> loadingExceptions.stream().map(ModLoadingException::getModInfo).anyMatch(otherInfo -> otherInfo == thisModInfo))) //Ignore files where any other mod already encountered an error
-                .map(modFileInfo -> new ModLoadingException(null, "fml.modloading.missinglicense", null, modFileInfo.getFile()))
-                .forEach(loadingExceptions::add);
     }
 
     private static String computeLanguageList() {
@@ -107,14 +85,15 @@ public final class ModLoader {
 
     /**
      * Run on the primary starting thread by ClientModLoader and ServerModLoader
-     * 
+     *
      * @param syncExecutor     An executor to run tasks on the main thread
      * @param parallelExecutor An executor to run tasks on a parallel loading thread pool
      * @param periodicTask     Optional periodic task to perform on the main thread while other activities run
      */
     public static void gatherAndInitializeMods(final Executor syncExecutor, final Executor parallelExecutor, final Runnable periodicTask) {
-        LoadingModList loadingModList = FMLLoader.getLoadingModList();
-        collectLoadingErrors(loadingModList);
+        var loadingModList = FMLLoader.getLoadingModList();
+        loadingIssues.clear();
+        loadingIssues.addAll(loadingModList.getModLoadingIssues());
 
         ForgeFeature.registerFeature("javaVersion", ForgeFeature.VersionFeatureTest.forVersionString(IModInfo.DependencySide.BOTH, System.getProperty("java.version")));
         ForgeFeature.registerFeature("openGLVersion", ForgeFeature.VersionFeatureTest.forVersionString(IModInfo.DependencySide.CLIENT, ImmediateWindowHandler.getGLVersion()));
@@ -122,12 +101,14 @@ public final class ModLoader {
         FMLLoader.backgroundScanHandler.waitForScanToComplete(periodicTask);
         final ModList modList = ModList.of(loadingModList.getModFiles().stream().map(ModFileInfo::getFile).toList(),
                 loadingModList.getMods());
-        if (!loadingExceptions.isEmpty()) {
-            LOGGER.fatal(CORE, "Error during pre-loading phase", loadingExceptions.get(0));
-            StartupNotificationManager.modLoaderMessage("ERROR DURING MOD LOADING");
-            modList.setLoadedMods(Collections.emptyList());
-            loadingStateValid = false;
-            throw new LoadingFailedException(loadingExceptions);
+
+        if (hasErrors()) {
+            var loadingErrors = getLoadingErrors();
+            for (var loadingError : loadingErrors) {
+                LOGGER.fatal(CORE, "Error during pre-loading phase: {}", loadingError, loadingError.cause());
+            }
+            cancelLoading(modList);
+            throw new ModLoadingException(loadingIssues);
         }
         List<? extends ForgeFeature.Bound> failedBounds = loadingModList.getMods().stream()
                 .map(ModInfo::getForgeFeatures)
@@ -137,30 +118,42 @@ public final class ModLoader {
 
         if (!failedBounds.isEmpty()) {
             LOGGER.fatal(CORE, "Failed to validate feature bounds for mods: {}", failedBounds);
-            StartupNotificationManager.modLoaderMessage("ERROR DURING MOD LOADING");
-            modList.setLoadedMods(Collections.emptyList());
-            loadingStateValid = false;
-            throw new LoadingFailedException(failedBounds.stream()
-                    .map(fb -> new ModLoadingException(fb.modInfo(), "fml.modloading.feature.missing", null, fb, ForgeFeature.featureValue(fb)))
+            cancelLoading(modList);
+            throw new ModLoadingException(failedBounds.stream()
+                    .map(fb -> ModLoadingIssue.error("fml.modloading.feature.missing", null, fb, ForgeFeature.featureValue(fb)).withAffectedMod(fb.modInfo()))
                     .toList());
         }
 
-        final List<ModContainer> modContainers = loadingModList.getModFiles().stream()
+        var modContainers = loadingModList.getModFiles().stream()
                 .map(ModFileInfo::getFile)
                 .map(ModLoader::buildMods)
                 .<ModContainer>mapMulti(Iterable::forEach)
                 .toList();
-        if (!loadingExceptions.isEmpty()) {
-            LOGGER.fatal(CORE, "Failed to initialize mod containers", loadingExceptions.get(0));
-            StartupNotificationManager.modLoaderMessage("ERROR DURING MOD LOADING");
-            modList.setLoadedMods(Collections.emptyList());
-            loadingStateValid = false;
-            throw new LoadingFailedException(loadingExceptions);
+        if (hasErrors()) {
+            for (var loadingError : getLoadingErrors()) {
+                LOGGER.fatal(CORE, "Failed to initialize mod containers: {}", loadingError, loadingError.cause());
+            }
+            cancelLoading(modList);
+            throw new ModLoadingException(loadingIssues);
         }
         modList.setLoadedMods(modContainers);
         ModLoader.modList = modList;
 
         constructMods(syncExecutor, parallelExecutor, periodicTask);
+    }
+
+    private static List<ModLoadingIssue> getLoadingErrors() {
+        return loadingIssues.stream().filter(issue -> issue.severity() == ModLoadingIssue.Severity.ERROR).toList();
+    }
+
+    private static void cancelLoading(ModList modList) {
+        StartupNotificationManager.modLoaderMessage("ERROR DURING MOD LOADING");
+        modList.setLoadedMods(Collections.emptyList());
+        loadingStateValid = false;
+    }
+
+    private static boolean hasErrors() {
+        return loadingIssues.stream().anyMatch(issue -> issue.severity() == ModLoadingIssue.Severity.ERROR);
     }
 
     private static void constructMods(Executor syncExecutor, Executor parallelExecutor, Runnable periodicTask) {
@@ -239,20 +232,22 @@ public final class ModLoader {
                 Throwable t = e.getCause();
                 final List<Throwable> notModLoading = Arrays.stream(t.getSuppressed())
                         .filter(obj -> !(obj instanceof ModLoadingException))
-                        .collect(Collectors.toList());
+                        .toList();
                 if (!notModLoading.isEmpty()) {
                     LOGGER.fatal("Encountered non-modloading exceptions!", e);
                     StartupNotificationManager.modLoaderMessage("ERROR DURING MOD LOADING");
                     throw new RuntimeException("Encountered non-modloading exception in future " + name, e);
                 }
 
-                final List<ModLoadingException> modLoadingExceptions = Arrays.stream(t.getSuppressed())
+                // Merger all potential modloading issues
+                var issues = Arrays.stream(t.getSuppressed())
                         .filter(ModLoadingException.class::isInstance)
                         .map(ModLoadingException.class::cast)
+                        .flatMap(ex -> ex.getIssues().stream())
                         .collect(Collectors.toList());
-                LOGGER.fatal(LOADING, "Failed to wait for future {}, {} errors found", name, modLoadingExceptions.size());
+                LOGGER.fatal(LOADING, "Failed to wait for future {}, {} errors found", name, issues.size());
                 StartupNotificationManager.modLoaderMessage("ERROR DURING MOD LOADING");
-                throw new LoadingFailedException(modLoadingExceptions);
+                throw new ModLoadingException(issues);
             } catch (Exception ignored) {}
         }
     }
@@ -266,7 +261,7 @@ public final class ModLoader {
                 .stream()
                 .map(e -> buildModContainerFromTOML(modFile, modInfoMap, e))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         if (containers.size() != modInfoMap.size()) {
             var modIds = modInfoMap.values().stream().map(IModInfo::getModId).sorted().collect(Collectors.toList());
             var containerIds = containers.stream().map(c -> c != null ? c.getModId() : "(null)").sorted().collect(Collectors.toList());
@@ -278,13 +273,13 @@ public final class ModLoader {
 
             var missingClasses = new ArrayList<>(modIds);
             missingClasses.removeAll(containerIds);
-            LOGGER.fatal(LOADING, "The following classes are missing, but are reported in the {}: {}", AbstractModProvider.MODS_TOML, missingClasses);
+            LOGGER.fatal(LOADING, "The following classes are missing, but are reported in the {}: {}", JarModsDotTomlModFileReader.MODS_TOML, missingClasses);
 
             var missingMods = new ArrayList<>(containerIds);
             missingMods.removeAll(modIds);
             LOGGER.fatal(LOADING, "The following mods are missing, but have classes in the jar: {}", missingMods);
 
-            loadingExceptions.add(new ModLoadingException(null, "fml.modloading.missingclasses", null, modFile.getFilePath()));
+            loadingIssues.add(ModLoadingIssue.error("fml.modloading.missingclasses", modFile.getFilePath()).withAffectedModFile(modFile));
         }
         // remove errored mod containers
         return containers.stream().filter(mc -> !(mc instanceof ErroredModContainer)).collect(Collectors.toList());
@@ -296,11 +291,11 @@ public final class ModLoader {
             final IModLanguageProvider.IModLanguageLoader languageLoader = idToProviderEntry.getValue();
             IModInfo info = Optional.ofNullable(modInfoMap.get(modId)).
             // throw a missing metadata error if there is no matching modid in the modInfoMap from the mods.toml file
-                    orElseThrow(() -> new ModLoadingException(null, "fml.modloading.missingmetadata", null, modId));
+                    orElseThrow(() -> new ModLoadingException(ModLoadingIssue.error("fml.modloading.missingmetadata", modId)));
             return languageLoader.loadMod(info, modFile.getScanResult(), FMLLoader.getGameLayer());
         } catch (ModLoadingException mle) {
             // exceptions are caught and added to the error list for later handling
-            loadingExceptions.add(mle);
+            loadingIssues.addAll(mle.getIssues());
             // return an errored container instance here, because we tried and failed building a container.
             return new ErroredModContainer();
         }
@@ -366,12 +361,8 @@ public final class ModLoader {
         }
     }
 
-    public static List<ModLoadingWarning> getWarnings() {
-        return ImmutableList.copyOf(loadingWarnings);
-    }
-
-    public static void addWarning(ModLoadingWarning warning) {
-        loadingWarnings.add(warning);
+    public void addIssue(ModLoadingIssue issue) {
+        this.loadingIssues.add(issue);
     }
 
     private static boolean runningDataGen = false;
